fix a positioning bug for modals on mobile

--- a/app/assets/stylesheets/pano/global/_modals.sass
+++ b/app/assets/stylesheets/pano/global/_modals.sass
@@ -58,6 +58,7 @@ $z: 1000
     height: 100%
     min-height: 100%
     max-height: 100%
+    margin: 0
 
 .modal
   +modal
